--- a/meal-plan.html
+++ b/meal-plan.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -88,6 +89,12 @@
     .toggle-btn:hover {
       background-color: #00c9a3;
     }
+    .arabic-text {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: right;
+      direction: rtl;
+      line-height: 2;
+    }
   </style>
 </head>
 <body>
@@ -138,6 +145,8 @@
 
   <script>
     let isArabic = false;
+    // Store the original English content
+    const originalContent = document.querySelector('.content').innerHTML;
 
     function toggleTheme() {
       document.body.classList.toggle('light-mode');
@@ -145,26 +154,34 @@
 
     function toggleLanguage() {
       isArabic = !isArabic;
-      document.getElementById('main-title').textContent = isArabic ? 'كيف تبني خطة وجبات؟' : 'How to Build a Meal Plan';
-      document.getElementById('content-box').innerHTML = isArabic ? `
-        <p><strong>🧠 الخطوة 1: احسب السعرات</strong><br>أولاً احسب <a href="tdee.html">TDEE</a> لتعرف عدد السعرات التي تحتاجها يومياً. سواء كان هدفك التنشيف أو الزيادة – السعرات أولاً.</p>
+      
+      if (isArabic) {
+        document.getElementById('main-title').textContent = 'كيف تبني خطة وجبات؟';
+        document.getElementById('content-box').innerHTML = `
+          <div class="arabic-text">
+            <p><strong>🧠 الخطوة 1: احسب السعرات</strong><br>أولاً احسب <a href="tdee.html">TDEE</a> لتعرف عدد السعرات التي تحتاجها يومياً. سواء كان هدفك التنشيف أو الزيادة – السعرات أولاً.</p>
 
-        <p><strong>🍗 الخطوة 2: قسّم الماكروز</strong><br>قسّم السعرات إلى بروتين، كربوهيدرات ودهون. البداية الجيدة: 30% بروتين، 40% كارب، 30% دهون. عدّل حسب نشاطك وهدفك.</p>
+            <p><strong>🍗 الخطوة 2: قسّم الماكروز</strong><br>قسّم السعرات إلى بروتين، كربوهيدرات ودهون. البداية الجيدة: 30% بروتين، 40% كارب، 30% دهون. عدّل حسب نشاطك وهدفك.</p>
 
-        <p><strong>🍽️ الخطوة 3: اختر الأطعمة الطبيعية</strong><br>ابنِ وجباتك من أطعمة غنية بالمغذيات:
-          <ul>
-            <li>البروتين: دجاج، لحم، سمك، بيض، زبادي يوناني</li>
-            <li>الكربوهيدرات: أرز، بطاطس، شوفان، فواكه، خضار</li>
-            <li>الدهون: زيت زيتون، أفوكادو، مكسرات، بذور</li>
-          </ul>
-        </p>
+            <p><strong>🍽️ الخطوة 3: اختر الأطعمة الطبيعية</strong><br>ابنِ وجباتك من أطعمة غنية بالمغذيات:
+              <ul>
+                <li>البروتين: دجاج، لحم، سمك، بيض، زبادي يوناني</li>
+                <li>الكربوهيدرات: أرز، بطاطس، شوفان، فواكه، خضار</li>
+                <li>الدهون: زيت زيتون، أفوكادو، مكسرات، بذور</li>
+              </ul>
+            </p>
 
-        <p><strong>🕐 الخطوة 4: وزّع الوجبات</strong><br>وزّع السعرات على 3–5 وجبات يومياً، كل وجبة فيها بروتين لدعم الشبع وبناء العضلات.</p>
+            <p><strong>🕐 الخطوة 4: وزّع الوجبات</strong><br>وزّع السعرات على 3–5 وجبات يومياً، كل وجبة فيها بروتين لدعم الشبع وبناء العضلات.</p>
 
-        <p><strong>📦 الخطوة 5: جهّز وتتبع</strong><br>حضّر الوجبات مسبقاً وتتبع استهلاكك في تطبيق مثل MyFitnessPal. الاستمرارية أهم من الكمال!</p>
+            <p><strong>📦 الخطوة 5: جهّز وتتبع</strong><br>حضّر الوجبات مسبقاً وتتبع استهلاكك في تطبيق مثل MyFitnessPal. الاستمرارية أهم من الكمال!</p>
 
-        <p><strong>🔁 نصيحة إضافية</strong><br>كن مرن! تقدر تاكل أشياء تحبها طالما داخل حدودك اليومية. دي اسمها <em>الدايت المرن</em>.</p>
-      ` : document.querySelector('.content').innerHTML;
+            <p><strong>🔁 نصيحة إضافية</strong><br>كن مرن! تقدر تاكل أشياء تحبها طالما داخل حدودك اليومية. دي اسمها <em>الدايت المرن</em>.</p>
+          </div>
+        `;
+      } else {
+        document.getElementById('main-title').textContent = 'How to Build a Meal Plan';
+        document.getElementById('content-box').innerHTML = originalContent;
+      }
     }
   </script>
 </body>
